src/objects/Borrado_Periodico__mdt.object
<CustomObject>
    <description>Determina la query para el borrado periódico de casos</description>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determina si el borrado está activo</description>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dias_desde_creacion__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Tipifica el número de días a partir el cual se borrarán los datos tomando de referencia el CreatedDate</description>
        <label>Días desde creación</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <description>Indica la query para el borrado de casos</description>
        <label>Query</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Borrado Periódico</label>
    <pluralLabel>Borrados Periódicos</pluralLabel>
    <validationRules>
        <fullName>Dias_positivos</fullName>
        <active>true</active>
        <description>No permite poner días negativos</description>
        <errorConditionFormula>Dias_desde_creacion__c &lt;0</errorConditionFormula>
        <errorMessage>No se permite introducir días negativos</errorMessage>
    </validationRules>
</CustomObject>